fix style title wrap

--- a/style.scss
+++ b/style.scss
@@ -350,7 +350,7 @@ h1 {
 }
 
 .title-wrap {
-  max-width: 90%;
+  max-width: calc(90% + 20px);
   margin-left: auto;
 
   @media(max-width: 991px) {
